Fixed weird styling bug that caused the "Learn More" button to overlap with the separator

--- a/src/home/styles/about.scss
+++ b/src/home/styles/about.scss
@@ -17,7 +17,7 @@
 
   @media screen and (max-width: 425px) {
     width: 100%;
-    height: 80%;
+    height: 85vh;
     padding: 0px;
     position: relative;
     word-wrap: break-word;
